tests/error/comptime/check_dereference18.bz
// error: invalid memory access of an object of type 'i32'
// note: while evaluating expression at compile time
// note: lifetime of the stack object has already ended
// error: failed to evaluate expression at compile time
function foo(i: move i32) -> &i32
{
	return i;
}

function test()
{
	(consteval {
		let &i = foo(0);
		i;
	});
}
